feat: adjustments after code review